--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,6 @@
       content="script-src 'self' 'unsafe-inline';"
     />
     <style>
-      :root {
-        --asda: "#fff";
-      }
-
       html {
         color-scheme: dark;
       }
@@ -48,6 +44,7 @@
         box-sizing: border-box;
         font-size: 20px;
         white-space: pre;
+        overflow: hidden;
       }
     </style>
   </head>
