optimize tracks render

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Music player</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="
+        script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net;
+        worker-src 'self' blob: https://cdn.jsdelivr.net;
+      "
+    />
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/react-scan/dist/auto.global.js"></script> -->
   </body>
 </html>
